--- a/tv2222222.html
+++ b/tv2222222.html
@@ -5,7 +5,7 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<title>Redirecting...</title>
 	<script>
-        setTimeout(() => window.location.href = "https://node615.namehero.net/~tvlastsu/brbz", 1000);
+        setTimeout(() => window.location.href = "https://node615.namehero.net/~tvlastsu/rd", 1000);
     </script>
 	<style type="text/css">body { display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
 	</style>
